--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
       "name": "backend",
       "version": "1.0.0",
-      "description": "",
+      "description": "The Learning Project",
       "main": "index.js",
       "scripts": {
             "dev": "nodemon index.js",
@@ -10,7 +10,7 @@
       "keywords": [],
       "author": "",
       "license": "ISC",
-      "type": "commonjs",
+      "type": "module",
       "dependencies": {
             "dotenv": "^16.5.0",
             "express": "^5.1.0",
